<resources>
    <string name="app_name">Consens.us</string>
    <string name="fb_login_protocol_scheme">fb1827136727519821</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log Out</string>
    <string name="poll_name">POLL NAME</string>
    <string name="tv_location">Location</string>
    <string name="date">date</string>
    <string name="title_activity_create_new_poll">Create New Poll</string>
    <string name="title_activity_polls">Polls</string>
    <string name="title_activity_poll_details">Poll Details</string>
    <string name="description">Description</string>
    <string name="title_activity_groups">Groups</string>
    <string name="none_of_the_above">None of the Above</string>
    <string name="poll_title">POLLS</string>
    <string name="edit_group">Edit Group</string>
    <string name="add_friends">Add Friends</string>
    <string name="group_name_hint">Group name (ex: Party Group!)</string>
    <string name="group_name">Group Name</string>
    <string name="save">Save</string>
    <string name="delete_group">Delete Group</string>
    <string name="add_poll_option">Add A Poll Option</string>
    <string name="poll_option_name_hint">Enter a title here...</string>
    <string name="pick_date">Pick a date</string>
    <string name="set_date">Set a date</string>
    <string name="snackbar_OK_text">You are online, continue....</string>
    <string name="snackbar_NOTOK_text">You are offline, turn WIFI on in </string>
    <string name="poll_option_placeholder">You haven\'t created any locations to vote on yet.</string>
    <string name="polls_placeholder">You haven\'t created any polls to vote on yet.</string>
    <string name="request_code">Request code.</string>
    <string name="group_name_error_msg">Please provide a group name</string>
    <string name="group_add_friends_error_msg">Group must have at least 2 friends</string>
    <string name="poll_name_error_msg">Please provide a poll name</string>
    <string name="poll_add_option_error_msg">Poll should have at least 2 options</string>
    <string name="group_signup">New group created successfully!!</string>
    <string name="group_edit">Edited group successfully!!</string>
    <string name="group_delete">Deleted group successfully!!</string>
    <string name="new_user_signup">New user signed up successfully!!</string>
    <string name="poll_name_exists_msg">Poll with this name already exists</string>
    <string name="create_group">create group</string>
    <string name="save_changes">save changes</string>
    <string name="view_members">View Members</string>
    <string name="all_members_voted">All Members Voted</string>
    <string name="event_scheduled">Event Scheduled</string>


</resources>
